--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "typed.js": "^2.0.11"
+    "typed.js": "^2.0.11",
+    "util.js": "^0.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
